fix: show example blue text on dark mode

--- a/_includes/styles/shortcodes.scss
+++ b/_includes/styles/shortcodes.scss
@@ -180,7 +180,7 @@
   summary {
     cursor: pointer;
     list-style-type: none;
-    color: var(--color-neptune);
+    color: var(--selected-blue);
     font-weight: bold;
     font-size: 0.85em;
 
@@ -200,7 +200,7 @@
   }
 
   &[open] {
-    border-color: var(--color-neptune);
+    border-color: var(--selected-blue);
 
     summary {
       &::before {
